--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,12 @@
         <div class="chat-container">
             <div id="chat-room" class="card">
                 <div class="chat-header">
-                    <h2 class="chat-title">Select a Chat Room</h2>
+                    <div class="chat-title-section">
+                        <button id="back-to-rooms-btn" class="back-btn" title="Back to room selection" style="display: none;">
+                            <span>←</span>
+                        </button>
+                        <h2 class="chat-title">Select a Chat Room</h2>
+                    </div>
                     <div id="user-count">0 online</div>
                 </div>
                 
