--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,31 @@
 								<button id="map-search-btn" class="btn btn-primary">Search</button>
 							</div>
 						</div>
+						<div class="overlay-panel overlay-middle-left">
+							<label>Activity Filters</label>
+							<div class="filter-controls">
+								<div class="filter-row">
+									<input type="checkbox" id="filter-active" class="filter-checkbox" checked>
+									<label for="filter-active" class="filter-label">🟢 Active now</label>
+								</div>
+								<div class="filter-row">
+									<input type="checkbox" id="filter-trending" class="filter-checkbox">
+									<label for="filter-trending" class="filter-label">🔥 Trending (60m)</label>
+								</div>
+								<div class="filter-row">
+									<input type="checkbox" id="filter-new" class="filter-checkbox">
+									<label for="filter-new" class="filter-label">✨ New rooms (10m)</label>
+								</div>
+							</div>
+							<div class="time-window-selector">
+								<label for="time-window">Time window:</label>
+								<select id="time-window" class="form-select">
+									<option value="15">15 minutes</option>
+									<option value="60" selected>1 hour</option>
+									<option value="1440">24 hours</option>
+								</select>
+							</div>
+						</div>
 						<div class="overlay-panel overlay-top-right">
 							<label for="map-room-id-input">Join by ID</label>
 							<div class="overlay-row">
@@ -56,6 +81,42 @@
 								<span class="info-label">Name:</span>
 								<span id="map-user-name" class="info-value">Loading...</span>
 								<button id="map-change-name-btn" class="btn btn-secondary btn-sm" aria-label="Edit your name">Edit</button>
+							</div>
+						</div>
+						<div class="overlay-panel overlay-bottom-right">
+							<button id="map-recenter-btn" class="btn btn-secondary btn-sm" title="Return to your location" aria-label="Return to your current location">
+								<span aria-hidden="true">🧭</span> My Location
+							</button>
+						</div>
+						<div class="overlay-panel overlay-middle-right">
+							<div class="map-legend">
+								<h4 class="legend-title">Map Legend</h4>
+								<div class="legend-items">
+									<div class="legend-item">
+										<div class="legend-color legend-active"></div>
+										<span class="legend-text">Active rooms</span>
+									</div>
+									<div class="legend-item">
+										<div class="legend-color legend-trending"></div>
+										<span class="legend-text">Trending rooms</span>
+									</div>
+									<div class="legend-item">
+										<div class="legend-color legend-new"></div>
+										<span class="legend-text">New rooms</span>
+									</div>
+									<div class="legend-item">
+										<div class="legend-color legend-inactive"></div>
+										<span class="legend-text">Available spots</span>
+									</div>
+								</div>
+								<div class="heat-scale">
+									<div class="heat-label">Activity Level:</div>
+									<div class="heat-gradient">
+										<span class="heat-min">Low</span>
+										<div class="heat-bar"></div>
+										<span class="heat-max">High</span>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -169,6 +230,32 @@
             </div>
         </div>
     </main>
+
+    <!-- Geohash Room Popup -->
+    <div id="geohash-popup" class="modal-overlay" style="display: none;" role="dialog" aria-labelledby="popup-title" aria-describedby="popup-description">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="popup-title">Chat Room</h2>
+                <button class="modal-close" id="close-popup" aria-label="Close popup">×</button>
+            </div>
+            <div class="modal-body">
+                <div class="geohash-popup-content">
+                    <div class="popup-geohash-display">
+                        <span class="popup-label">Room ID:</span>
+                        <span id="popup-geohash" class="popup-value"></span>
+                    </div>
+                    <div class="popup-status">
+                        <span id="popup-status" class="popup-status-text"></span>
+                    </div>
+                    <p id="popup-description" class="popup-description"></p>
+                    <div class="popup-actions">
+                        <button id="popup-enter-btn" class="btn btn-primary"></button>
+                        <button id="popup-cancel-btn" class="btn btn-secondary">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="libs/ngeohash.js" defer></script>
     <script src="libs/emoji-picker-simple.js" defer></script>
